--- a/Task_3_by_riya.ipynb
+++ b/Task_3_by_riya.ipynb
@@ -335,6 +335,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 1: Load and Inspect the Dataset**"
+      ],
+      "metadata": {
+        "id": "SAHNXVvLj9Ok"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# !pip3 install streamlit\n",
@@ -535,12 +544,88 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Step 2: Data Preprocessing**"
+      ],
       "metadata": {
-        "id": "8clWLXNUi2Mr"
+        "id": "WyKT0IjFjagF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Handle Missing Values and Duplicates:"
+      ],
+      "metadata": {
+        "id": "1gtXEAr4jicJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for col in data.select_dtypes(include=['float64', 'int64']).columns:\n",
+        "    data[col].fillna(data[col].median(), inplace=True)\n",
+        "\n",
+        "if 'wd' in data.columns:\n",
+        "    data['wd'].fillna(data['wd'].mode().iloc[0], inplace=True)\n",
+        "\n",
+        "\n",
+        "data.drop_duplicates(inplace=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8clWLXNUi2Mr",
+        "outputId": "7e78ab2c-09d6-4d9f-e524-2295d63dd800"
       },
-      "execution_count": null,
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-14-b8a697eb70e6>:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+            "\n",
+            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+            "\n",
+            "\n",
+            "  data[col].fillna(data[col].median(), inplace=True)\n",
+            "<ipython-input-14-b8a697eb70e6>:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+            "\n",
+            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+            "\n",
+            "\n",
+            "  data['wd'].fillna(data['wd'].mode().iloc[0], inplace=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Feature Engineering and Encoding:"
+      ],
+      "metadata": {
+        "id": "u7GGK6xwjnNm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "\n",
+        "label_encoder = LabelEncoder()\n",
+        "data['wd'] = label_encoder.fit_transform(data['wd'])\n"
+      ],
+      "metadata": {
+        "id": "OGuIQ1lUjntC"
+      },
+      "execution_count": 15,
       "outputs": []
     }
   ]
